// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked is true 1`] = `
<div
  className="checkbox  flex-none"
  onClick={[Function]}
  style={
    Object {
      "border": "1px solid #BDBDBD",
    }
  }
>
  <label>
    <input
      checked={true}
      className=""
      disabled={false}
      id={null}
      name="FOO_NAME"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      style={
        Object {
          "height": "30px",
          "width": "30px",
        }
      }
    >
      <i
        className="fa fa-check show"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            "fontSize": "15px",
          }
        }
      />
    </span>
  </label>
</div>
`;

exports[`disabled is true 1`] = `
<div
  className="checkbox  flex-none"
  onClick={[Function]}
  style={
    Object {
      "border": "1px solid #BDBDBD",
    }
  }
>
  <label>
    <input
      checked={false}
      className=""
      disabled={true}
      id={null}
      name="FOO_NAME"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      style={
        Object {
          "height": "30px",
          "width": "30px",
        }
      }
    >
      <i
        className="fa fa-check "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            "fontSize": "15px",
          }
        }
      />
    </span>
  </label>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="checkbox  flex-none"
  onClick={[Function]}
  style={
    Object {
      "border": "1px solid #BDBDBD",
    }
  }
>
  <label>
    <input
      checked={false}
      className=""
      disabled={false}
      id={null}
      name="FOO_NAME"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      style={
        Object {
          "height": "30px",
          "width": "30px",
        }
      }
    >
      <i
        className="fa fa-check "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            "fontSize": "15px",
          }
        }
      />
    </span>
  </label>
</div>
`;

exports[`size is undefined 1`] = `
<div
  className="checkbox  flex-none"
  onClick={[Function]}
  style={
    Object {
      "border": "1px solid #BDBDBD",
    }
  }
>
  <label>
    <input
      checked={false}
      className=""
      disabled={false}
      id={null}
      name="FOO_NAME"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      style={Object {}}
    >
      <i
        className="fa fa-check "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            "fontSize": "15px",
          }
        }
      />
    </span>
  </label>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="checkbox  flex-none"
  onClick={[Function]}
  style={
    Object {
      "border": "1px solid #BDBDBD",
    }
  }
>
  <label>
    <input
      checked={false}
      className=""
      disabled={false}
      id={null}
      name="FOO_NAME"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      style={
        Object {
          "height": "30px",
          "width": "30px",
        }
      }
    >
      <i
        className="fa fa-check "
        style={
          Object {
            "color": "black",
            "fontSize": "15px",
          }
        }
      />
    </span>
  </label>
</div>
`;
